# ClientServer-simpleGame

./: .gitignore  protocol.cpp  protocol.hpp
Game/: CMakeLists.txt  main.cpp
Game/src/: client.cpp  client.hpp
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
